--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,6 @@ author_email = marc@compte.cat
 license = BSD-3-Clause  # Example license
 classifiers =
     Environment :: Web Environment
-    Framework :: Django :: 3.1
     Framework :: Django CMS :: 3.8
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
@@ -17,6 +16,7 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
@@ -28,6 +28,6 @@ include_package_data = true
 packages = find:
 python_requires = >=3.5
 install_requires =
-    django >= 3.0
+    django >= 2.0
     django-cms >= 3.8
     requests >= 2.25.1
